# mx208

./: .gitignore  123456789123456  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  README.md  TODO  build.sh  client.c  command_handler.c  command_handler.h  commands.h  connection_handler.c  connection_handler.h  key_manager.c  mx_std.h  mxserver.c  queue.c  queue.h  test.sh
include/: algorithm.h  algorithm_manager.h  command_handler.h  commands.h  connection_handler.h  data_composer.h  data_parser.h  device_manager.h  file_manager.h  key_manager.h  mx_std.h  mxpci_dev.h  mxpci_mcu.h  mxpci_spi.h  mxpcibasic_types.h  mxpciio.h  mxserver.h  queue.h
include/sm/: demo_alo.h  mirdef_x86.h  sm2_32_table.h  sm2_64_debug_table.h
sm2_3_4/: .main.c.swp  CMakeLists.txt  alo  config.c  demo_alo.c  demo_alo.h  linux  linux32_x86.sh  linux64_x86.sh  main.c  main.h  mex  mirdef_x86.h64  mrcomba.c  mrcomba2.c  mrecn2.c  mrgcm.c  mrkcm.c  mrzzn4.c  sm2.c  sm2.h  sm2_32_debug_table.h  sm2_64_table.h  sm3.c  sm3.h  sm4.c  sm4.h  test
src/: CMakeLists.txt  algorithm.c  algorithm_manager.c  command_handler.c  commands.c  connection_handler.c  data_composer.c  data_parser.c  device_manager.c  file_manager.c  key_manager.c  mxserver.c  queue.c
test/: CMakeLists.txt  client.c  commands.c  key_test.c
